-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14, 15
-
Component/s: hotspot
-
b25
-
x86_64
-
windows
The following test timed out in the JDK14 CI:
jdk/jfr/event/oldobject/TestLargeRootSet.java
Here's a snippet from the log file:
ATTEMPT: 786
====================================
Sample: 0
- allocationTime: 2019-12-13T08:26:01.477158474Z
- type: jdk.jfr.event.oldobject.TestLargeRootSet$RootThread
- root:
- description: Thread Name: Thread-39300
- system: Threads
- type: Handle Area
- stack:
jdk.jfr.event.oldobject.TestLargeRootSet.main(...)
jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(...)
jdk.internal.reflect.NativeMethodAccessorImpl.invoke(...)
jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(...)
java.lang.reflect.Method.invoke(...)
com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(...)
java.lang.Thread.run(...)
Sample: 1
- allocationTime: 2019-12-13T08:26:02.015327454Z
- type: java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionNode
- root:
- description: Thread Name: Thread-39294
- system: Threads
- type: Stack Variable
- stack:
java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.await(...)
java.util.concurrent.CyclicBarrier.dowait(...)
java.util.concurrent.CyclicBarrier.await(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
ATTEMPT: 787
====================================
----------System.err:(0/0)----------
----------rerun:(44/5504)*----------
<snip>
result: Error. Program `c:\ade\mesos\work_dir\jib-master\install\jdk-14+27-1338\windows-x64-debug.jdk\jdk-14\fastdebug\bin\java' timed out (timeout set to 1200000ms, elapsed time including timeout handling was 1237951ms).
test result: Error. Program `c:\ade\mesos\work_dir\jib-master\install\jdk-14+27-1338\windows-x64-debug.jdk\jdk-14\fastdebug\bin\java' timed out (timeout set to 1200000ms, elapsed time including timeout handling was 1237951ms).
jdk/jfr/event/oldobject/TestLargeRootSet.java
Here's a snippet from the log file:
ATTEMPT: 786
====================================
Sample: 0
- allocationTime: 2019-12-13T08:26:01.477158474Z
- type: jdk.jfr.event.oldobject.TestLargeRootSet$RootThread
- root:
- description: Thread Name: Thread-39300
- system: Threads
- type: Handle Area
- stack:
jdk.jfr.event.oldobject.TestLargeRootSet.main(...)
jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(...)
jdk.internal.reflect.NativeMethodAccessorImpl.invoke(...)
jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(...)
java.lang.reflect.Method.invoke(...)
com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(...)
java.lang.Thread.run(...)
Sample: 1
- allocationTime: 2019-12-13T08:26:02.015327454Z
- type: java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionNode
- root:
- description: Thread Name: Thread-39294
- system: Threads
- type: Stack Variable
- stack:
java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.await(...)
java.util.concurrent.CyclicBarrier.dowait(...)
java.util.concurrent.CyclicBarrier.await(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
jdk.jfr.event.oldobject.TestLargeRootSet$RootThread.buildRootObjects(...)
ATTEMPT: 787
====================================
----------System.err:(0/0)----------
----------rerun:(44/5504)*----------
<snip>
result: Error. Program `c:\ade\mesos\work_dir\jib-master\install\jdk-14+27-1338\windows-x64-debug.jdk\jdk-14\fastdebug\bin\java' timed out (timeout set to 1200000ms, elapsed time including timeout handling was 1237951ms).
test result: Error. Program `c:\ade\mesos\work_dir\jib-master\install\jdk-14+27-1338\windows-x64-debug.jdk\jdk-14\fastdebug\bin\java' timed out (timeout set to 1200000ms, elapsed time including timeout handling was 1237951ms).