8235921: jdk/jfr/event/oldobject/TestLargeRootSet.java times out with debug bits

Reviewed-by: mgronlun